new div created today of paan corner

--- a/file.html
+++ b/file.html
@@ -31,6 +31,19 @@
             </div>
         </div>
 
+        <div class ="trending">
+            <h1>
+                Paan Corner
+            </h1>
+            <p1>
+                Your favourite paan shop is now online 
+            </p1>
+            <br>
+            <button type="Shop">Shop Now</button>
+
+
+        </div>
+
     
 </body>
 </html>
