i have add new code in frontend part

--- a/file.html
+++ b/file.html
@@ -38,7 +38,22 @@
                 <button type="button">Shop Now</button>
             </div>
         </div>
-        
+        <div class="container">
+            <div class="pharmacy">
+                <h1>Pharmacy at <br> your doorstep!</h1>
+                <p>cough Syrups, Painrelif sprays & more</p>
+                <button type="button">Order Now</button>
+            </div>
+            <div class="Pet-Care">
+                <h1>Pet Care Supplies <br>in minutes</h1>
+                <p>Food, treats, toys & more</p>
+                <button type="button">Order Now</button>
+            </div>
+            <div class="baby-care">
+                <h1>No time for <br>a diaper run?</h1>
+                <p>Get baby care essential in minutes</p>
+                <button type="button">Order Now</button>
+        </div>
     
 </body>
 </html>
